--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -45,4 +45,4 @@ jobs:
 
       # Deploy pipeline with branch specific parameters
       - name: Deploy data pipeline to ${{ github.ref_name }}
-        run: snow git execute "@${REPO_NAME}/branches/${BRANCH_NAME}/snowflake/*"
+        run: snow git execute "@${REPO_NAME}/branches/${BRANCH_NAME}/.snowflake/*"
