setup_snowflake is added

--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -45,5 +45,7 @@ jobs:
 
       # Deploy pipeline with branch specific parameters
       - name: Deploy data pipeline to ${{ github.ref_name }}
-        run: snow git execute "@${REPO_NAME}/branches/${BRANCH_NAME}/.snowflake/*"
+        run: snow git execute "@${REPO_NAME}/branches/${BRANCH_NAME}/.snowflake/setup_snowflake.sql"
+
+        
         
