--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -35,9 +35,9 @@ jobs:
           cli-version: "latest"
           default-config-file-path: "snowflake/config.toml"
 
-      
-      - name: Set Branch Name
-        run: BRANCH_NAME=${{ github.ref_name }}
+      - name: Deploy data pipeline to ${{ github.ref_name }}
+        run: |
+          BRANCH_NAME=${{ github.ref_name }}      
 
       # Update Snowflake's copy of the repository
       - name: Fetch repository changes
