--- a/snowflake/config.toml
+++ b/snowflake/config.toml
@@ -1,8 +1,8 @@
 [connections.default]
-warehouse = "COMPUTE_WH"
+warehouse = ${{ secrets.SNOWFLAKE_WAREHOUSE_DEV }}
 role = "ACCOUNTADMIN"
 database = "DEMO_COMMON"
 schema = "PUBLIC"
-account = "GWNKTAH-TF62777"
-user = "nisar"
-password = "B0lt0n198#?"
+account = ${{ secrets.SNOWFLAKE_ACCOUNT_DEV }}
+user = ${{ secrets.SNOWFLAKE_USER_DEV }}
+password = ${{ secrets.SNOWFLAKE_PASSWORD_DEV }}
