--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -23,6 +23,7 @@ jobs:
       SNOWFLAKE_CONNECTIONS_DEFAULT_USER: ${{ secrets.SNOWFLAKE_USER_DEV }}
       SNOWFLAKE_CONNECTIONS_DEFAULT_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD_DEV }}
       SNOWFLAKE_CONNECTIONS_DEFAULT_DATABASE: "DEMO_COMMON"
+      SNOWFLAKE_CONNECTIONS_DEFAULT_SCHEMA: "PUBLIC"
         
 
     steps:
