--- a/snowflake/config.toml
+++ b/snowflake/config.toml
@@ -3,6 +3,6 @@ warehouse = "COMPUTE_WH"
 role = "ACCOUNTADMIN"
 database = "DEMO_COMMON"
 schema = "PUBLIC"
-account = "GWNKTAH-TF62777"
+account = "gwnktah-dev_account"
 user = "nisar"
-password = "B0lt0n198#?"
+password = "Blackburn786#?"
