--- a/.github/workflows/deployment_uat.yml
+++ b/.github/workflows/deployment_uat.yml
@@ -37,9 +37,9 @@ jobs:
           cli-version: "latest"
           default-config-file-path: "snowflake/config.toml"               
 
-      - name: Deploy data pipeline to ${{ github.ref_name }}
+      - name: Deploy data pipeline to uat
         run: |
-          BRANCH_NAME=${{ github.ref_name }}      
+          BRANCH_NAME="uat"    
 
       # Update Snowflake's copy of the repository
       - name: Fetch repository changes
