--- a/snowflake/config.toml
+++ b/snowflake/config.toml
@@ -3,6 +3,6 @@ warehouse = "COMPUTE_WH"
 role = "SYSADMIN"
 database = "DEMO_COMMON"
 schema = "PUBLIC"
-account = "gwnktah-uat_account"
+account = "gwnktah-dev_account"
 user = "nisar"
 password = "Blackburn786#?"
