--- a/.github/workflows/deployment_uat.yml
+++ b/.github/workflows/deployment_uat.yml
@@ -35,7 +35,7 @@ jobs:
         uses: Snowflake-Labs/snowflake-cli-action@v1.5
         with:
           cli-version: "latest"
-          default-config-file-path: "snowflake/config.toml"               
+          default-config-file-path: "snowflake/config_uat.toml"               
 
       - name: Deploy data pipeline to uat
         run: |
