--- a/.github/workflows/deployment_uat.yml
+++ b/.github/workflows/deployment_uat.yml
@@ -4,7 +4,7 @@ name: Deploy data pipeline
 on:
   push:
     branches:
-      - uat      
+      - dev      
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -37,9 +37,9 @@ jobs:
           cli-version: "latest"
           default-config-file-path: "snowflake/config_uat.toml"               
 
-      - name: Deploy data pipeline to uat
+      - name: Deploy data pipeline to ${{ github.ref_name }}
         run: |
-          BRANCH_NAME="uat"    
+          BRANCH_NAME=${{ github.ref_name }}      
 
       # Update Snowflake's copy of the repository
       - name: Fetch repository changes
@@ -47,7 +47,7 @@ jobs:
 
       # Deploy pipeline with branch specific parameters
       - name: Deploy data pipeline to ${{ github.ref_name }}
-        run: snow git execute "@${REPO_NAME}/branches/uat/snowflake/setup_snowflake.sql"
+        run: snow git execute "@${REPO_NAME}/branches/${{ github.ref_name }}/snowflake/setup_snowflake.sql"
 
         
         
