--- a/.github/workflows/deployment_uat.yml
+++ b/.github/workflows/deployment_uat.yml
@@ -4,7 +4,7 @@ name: Deploy data pipeline
 on:
   push:
     branches:
-      - dev      
+      - uat      
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
