--- a/snowflake/config_dev.toml
+++ b/snowflake/config_dev.toml
@@ -3,6 +3,6 @@ warehouse = "COMPUTE_WH"
 role = "SYSADMIN"
 database = "DEMO_COMMON"
 schema = "PUBLIC"
-account = "gwnktah-dev_account"
+account = ${{ secrets.SNOWFLAKE_ACCOUNT_DEV }}
 user = "nisar"
 password = "Blackburn786#?"
