--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -4,7 +4,7 @@ name: Deploy data pipeline
 on:
   push:
     branches:
-      - prod      
+      - main      
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
