--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -35,7 +35,14 @@ jobs:
         uses: Snowflake-Labs/snowflake-cli-action@v1.5
         with:
           cli-version: "latest"
-          default-config-file-path: "snowflake/config_dev.toml"               
+      - name: Configure Snowcli
+        env: |
+          SNOWFLAKE_CONNECTIONS_DEFAULT_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT_DEV }}
+        run: |
+          cd $GITHUB_WORKSPACE
+          echo "[connection]" > config.toml
+          echo "[connection.dev]" >> config.toml
+          echo "account = \"$SNOWFLAKE_CONNECTIONS_DEFAULT_ACCOUNT\"" >> config.toml             
 
       - name: Deploy data pipeline to ${{ github.ref_name }}
         run: |
