--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -31,10 +31,7 @@ jobs:
         uses: actions/checkout@v4
               
       # Install Snowflake CLI GitHub Action and point to config file
-      - name: Install snowflake-cli
-        uses: Snowflake-Labs/snowflake-cli-action@v1.5
-        with:
-          cli-version: "latest"
+
       - name: Configure Snowcli
         env: |
           SNOWFLAKE_CONNECTIONS_DEFAULT_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT_DEV }}
@@ -42,7 +39,13 @@ jobs:
           cd $GITHUB_WORKSPACE
           echo "[connection]" > config.toml
           echo "[connection.dev]" >> config.toml
-          echo "account = \"$SNOWFLAKE_CONNECTIONS_DEFAULT_ACCOUNT\"" >> config.toml             
+          echo "account = \"$SNOWFLAKE_CONNECTIONS_DEFAULT_ACCOUNT\"" >> config.toml
+
+      - name: Install snowflake-cli
+        uses: Snowflake-Labs/snowflake-cli-action@v1.5
+        with:
+          cli-version: "latest"
+          default-config-file-path: "$GITHUB_WORKSPACE/config.toml"             
 
       - name: Deploy data pipeline to ${{ github.ref_name }}
         run: |
