--- a/.github/workflows/deployment_dev.yml
+++ b/.github/workflows/deployment_dev.yml
@@ -56,12 +56,12 @@ jobs:
           BRANCH_NAME=${{ github.ref_name }}      
 
       # Update Snowflake's copy of the repository
-      - name: Fetch repository changes
-        run: snow git fetch "${REPO_NAME}"
+      - name: Fetch repository/ changes
+        run: snow --config-file $GITHUB_WORKSPACE/config.toml git fetch "${REPO_NAME}"
 
       # Deploy pipeline with branch specific parameters
       - name: Deploy data pipeline to ${{ github.ref_name }}
-        run: snow git execute "@${REPO_NAME}/branches/${{ github.ref_name }}/snowflake/setup_snowflake.sql"
+        run: snow --config-file $GITHUB_WORKSPACE/config.toml git execute "@${REPO_NAME}/branches/${{ github.ref_name }}/snowflake/setup_snowflake.sql"
 
         
         
